--- a/MyShop/docker-compose.yml
+++ b/MyShop/docker-compose.yml
@@ -2,18 +2,39 @@ version: '3.8'
 
 services:
   catalog.api:
+    container_name: lde.catalog.api
     build:
       context: .
       dockerfile: Catalog/Catalog.Host/Dockerfile
     environment:
-       - ASPNETCORE_ENVIRONMENT=Development
-       - ASPNETCORE_URLS=http://+:5000
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:5000
+    depends_on:
+      - postgres
     ports:
       - 5000:5000
   nginx:
-      image: nginx
-      ports:
-        - 80:80
+    image: nginx
+    container_name: lde.nginx
+    ports:
+      - 80:80
+  pgadmin4:
+    image: dpage/pgadmin4
+    container_name: lde.pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: user@domain.com
+      PGADMIN_DEFAULT_PASSWORD: postgres
+    depends_on:
+      - postgres
+    ports:
+      - 8001:80
+  postgres:
+    image: postgres
+    container_name: lde.postgres
+    environment:
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - 5433:5432
 
 networks:
   default:
